# Project_Transform3D

./: Build_Debug.bat  Build_MinSizeRel.bat  Build_RelWithDebInfo.bat  Build_Release.bat  CMakeLists.txt  GenerateProjectFiles_vs2019.bat  GenerateProjectFiles_vs2022.bat  HotReload_vs2019.bat  HotReload_vs2022.bat  Package_Debug.bat  Package_MinSizeRel.bat  Package_RelWithDebInfo.bat  Package_Release.bat  README.md
Module/: CMakeLists.txt  README.md
Module/AudioModule/: CMakeLists.txt
Module/AudioModule/Src/: AudioModule.cpp
Module/CrashModule/Inc/: CrashModule.h
Module/MathModule/Inc/: Mat2x2.h  Mat3x3.h  Mat4x4.h  Quat.h  Transform.h  Vec2.h  Vec3.h  Vec4.h
Module/PlatformModule/: CMakeLists.txt
Module/PlatformModule/Inc/: PlatformModule.h
Module/PlatformModule/Src/: InputController.cpp  PlatformModule.cpp
Module/RenderModule/: CMakeLists.txt
Module/RenderModule/Inc/: GeometryGenerator.h  GeometryRenderer3D.h  MeshRenderer.h  RenderModule.h  Shader.h  StaticMesh.h  TileMap.h  Vertex2D.h  Vertex3D.h  VertexBuffer.h
Module/RenderModule/Src/: Assertion.h  GeometryGenerator.cpp  GeometryRenderer3D.cpp  MeshRenderer.cpp  RenderModule.cpp  Shader.cpp  StaticMesh.cpp  TileMap.cpp  VertexBuffer.cpp
Resource/Shader/: GeometryRenderer3D.frag  MeshRenderer.frag  Shader.vert  TileMapGenerator.comp
Transform3D/: CMakeLists.txt
Transform3D/Inc/: Application.h  Camera.h  EntityManager.h  Grid.h  IEntity.h  IManager.h  Sphere.h
Transform3D/Res/: Resource.rc.in  resource.h
Transform3D/Src/: Application.cpp  Camera.cpp  EntityManager.cpp  Grid.cpp  Main.cpp  Sphere.cpp
