cmake_minimum_required(VERSION 3.27)

project(Transform3D)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(PROJECT_NAME "Transform3D")

add_subdirectory(ThirdParty)
add_subdirectory(Module)
add_subdirectory(${PROJECT_NAME})

set(CPACK_GENERATOR "NSIS")
set(CPACK_NSIS_MUI_ICON ${CMAKE_CURRENT_SOURCE_DIR}/Resource/Icon/Icon.ico)
set(CPACK_NSIS_MUI_UNIICON ${CMAKE_CURRENT_SOURCE_DIR}/Resource/Icon/Icon.ico)
set(CPACK_NSIS_MUI_HEADERIMAGE  ${CMAKE_CURRENT_SOURCE_DIR}\\\\Resource\\\\Texture\\\\Header.bmp)
set(CPACK_NSIS_MUI_HEADERIMAGE_UNBITMAP  ${CMAKE_CURRENT_SOURCE_DIR}\\\\Resource\\\\Texture\\\\Header.bmp)
set(CPACK_NSIS_MUI_WELCOMEFINISHPAGE_BITMAP ${CMAKE_CURRENT_SOURCE_DIR}\\\\Resource\\\\Texture\\\\Install.bmp)
set(CPACK_NSIS_MUI_UNWELCOMEFINISHPAGE_BITMAP ${CMAKE_CURRENT_SOURCE_DIR}\\\\Resource\\\\Texture\\\\Install.bmp)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Resource DESTINATION .)
install(TARGETS ${PROJECT_NAME} DESTINATION .)

set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_VERSION "0.0")
set(CPACK_PACKAGE_VENDOR "Github-ChoiJiOne")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "https://github.com/ChoiJiOne/Project_Transform3D")
set(CPACK_PACKAGE_INSTALL_DIRECTORY ${PROJECT_NAME})
set(CPACK_PACKAGE_EXECUTABLES ${PROJECT_NAME} ${PROJECT_NAME})

set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")

include(CPack)